# notepad

./: pyproject.toml
migrations/: env.py
migrations/versions/: 641706016476_unique_email.py  98c131f1a337_admin.py  9b6a1275c0f5_initial.py  bb40a16b50d9_user_text_reference.py
notepad/core/: config.py  database.py
notepad/models/: base.py  tag.py  text.py  user.py
notepad/repositories/: base.py  tag.py  text.py  user.py
notepad/resources/templates/: base.html  login.html  signup.html
notepad/routes/: __init__.py  web.py
notepad/schemas/: tag.py  text.py  user.py
notepad/services/: tag.py  text.py  user.py
